--- a/staff.html
+++ b/staff.html
@@ -88,10 +88,12 @@
 
     // TODO: paste your Firebase config here
     const firebaseConfig = {
-      // apiKey: "...",
-      // authDomain: "...",
-      // projectId: "...",
-      // ...
+      apiKey: "AIzaSyBdUGGgGmh55wrVtyEZiVMLRw5MRfzfLsU",
+      authDomain: "oak-arc-orderboard.firebaseapp.com",
+      projectId: "oak-arc-orderboard",
+      storageBucket: "oak-arc-orderboard.firebasestorage.app",
+      messagingSenderId: "10176044560",
+      appId: "1:10176044560:web:e26f15ce6a7781a610f495"
     };
 
     const app = initializeApp(firebaseConfig);
